# reddit

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  enums.ts  index.tsx
frontend/src/components/: CategoriesList.tsx  Category.tsx  Comments.tsx  LoginForm.tsx  SignupForm.tsx  Submission.tsx
frontend/src/stores/: categories.tsx  comments.ts  index.tsx  rootStore.ts  submissions.ts  user.tsx
reddit/: schema.py  settings.py  urls.py  wsgi.py
reeddit/: package-lock.json  package.json
reeddit/src/: App.tsx  AppState.tsx  agent.tsx  index.tsx
reeddit/src/components/: Auth.tsx  LoginForm.tsx  Navbar.tsx  SignupForm.tsx
reeddit/src/stores/: authStore.tsx  categories.tsx  commonStore.tsx  index.tsx  user.tsx
scripts/: generate_test_data.py
submissions/: admin.py  api.py  factories.py  models.py  permissions.py  schema.py  serializers.py  urls.py  views.py
submissions/migrations/: 0001_initial.py  0002_notification_subscriptions.py  0003_auto_20191109_1503.py  0004_auto_20191109_1715.py  0005_auto_20191117_1540.py  0006_category_author.py  0007_image.py  0008_auto_20200108_0750.py  0009_auto_20200125_2031.py  0010_auto_20200214_0534.py  0011_commentvote.py  0012_follow.py  0013_auto_20200216_0159.py
users/: admin.py  factories.py  models.py  serializers.py
users/migrations/: 0001_initial.py
